[gd_scene load_steps=11 format=3 uid="uid://bdb8oj7ai4ur1"]

[ext_resource type="Script" path="res://equipment/air_strike.gd" id="1_t8033"]
[ext_resource type="Texture2D" uid="uid://jxv7xii8hl7p" path="res://assets/sprites/airstrike_targeting.png" id="2_4qqk4"]
[ext_resource type="Texture2D" uid="uid://er3vuu6x88lc" path="res://assets/sprites/a-10_shadow.png" id="3_qquqb"]
[ext_resource type="SpriteFrames" uid="uid://cnhwiphkkotwh" path="res://assets/spriteframes/fx/explosion_v1.tres" id="4_l8u6q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i2w84"]

[sub_resource type="Animation" id="Animation_43rcc"]
resource_name = "air_strike_flyover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaneShadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2.46229),
"update": 0,
"values": [Vector2(0, 1000), Vector2(0, -1000)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s6o88"]
_data = {
"air_strike_flyover": SubResource("Animation_43rcc")
}

[sub_resource type="Animation" id="Animation_xdq77"]
resource_name = "air_strike_firing"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D/Crosshairs:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vsc3p"]
resource_name = "air_strike_targeting"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D/Crosshairs:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sxbw5"]
_data = {
"air_strike_firing": SubResource("Animation_xdq77"),
"air_strike_targeting": SubResource("Animation_vsc3p")
}

[node name="air_strike" type="Node2D"]
script = ExtResource("1_t8033")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_i2w84")
disabled = true
debug_color = Color(1, 0.0117647, 0.0117647, 0.419608)

[node name="Crosshairs" type="Sprite2D" parent="Area2D/CollisionShape2D"]
z_index = -1
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("2_4qqk4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D/CollisionShape2D"]
position = Vector2(0, -40)
sprite_frames = ExtResource("4_l8u6q")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Area2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_s6o88")
}

[node name="StrikeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sxbw5")
}

[node name="DangerCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="PlaneShadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.168627)
position = Vector2(0, 1000)
texture = ExtResource("3_qquqb")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="Area2D/CollisionShape2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="Area2D/AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
[connection signal="timeout" from="StrikeTimer" to="." method="_on_strike_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DangerCloseTimer" to="." method="_on_danger_close_timer_timeout"]
